<resources>
    <string name="app_name">LoadApp</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>


    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="notification_description">The Project 3 repository is downloaded</string>
    <string name="notification_button">See changes</string>

    <string name="button_name">Click me</string>
    <string name="button_loading">We are loading </string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="glide_description">Glide - Image Loading Library by BumpTech</string>
    <string name="loadapp_description">LoadApp - current repository by Udacity</string>
    <string name="retrofit_description">Retrofit - Type-safe HTTP client for Anfroid and Java by Square, inc</string>
    <string name="loading">We are loading</string>
    <string name="download">Download</string>
    <string name="file_name">File name:</string>
    <string name="status">Status:</string>
    <string name="channel_name">downloading_channel</string>
    <string name="channel_id">downloading</string>
    <string name="channel_description">channel_for_dowmloading</string>
    <string name="fail">Fail</string>
    <string name="success">Success</string>
    <string name="ok">Ok</string>
</resources>
